bbss218/force-app/main/default/objects/Account/fields/Client_Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Client_Point_of_Contact__c</fullName>
    <label>Client Point of Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>