bbss218/force-app/main/default/objects/Account/fields/Client_Signatory_contact__c.field-meta.xml
<CustomField>
    <fullName>Client_Signatory_contact__c</fullName>
    <label>Client Signatory contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>