bbss218/force-app/main/default/objects/Account/fields/Company_Facebook_URL__c.field-meta.xml
<CustomField>
    <fullName>Company_Facebook_URL__c</fullName>
    <label>Company Facebook URL</label>
    <type>Url</type>
</CustomField>