bbss218/force-app/main/default/objects/Account/fields/Company_Twitter_X_URL__c.field-meta.xml
<CustomField>
    <fullName>Company_Twitter_X_URL__c</fullName>
    <label>Company Twitter (X) URL</label>
    <type>Url</type>
</CustomField>