bbss218/force-app/main/default/objects/Account/fields/Description_Comments__c.field-meta.xml
<CustomField>
    <fullName>Description_Comments__c</fullName>
    <label>Description/Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>