bbss218/force-app/main/default/objects/Account/fields/MSA_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>MSA_Expiry_Date__c</fullName>
    <label>MSA Expiry Date</label>
    <type>Date</type>
</CustomField>