bbss218/force-app/main/default/objects/Account/fields/MSA_Signed_by__c.field-meta.xml
<CustomField>
    <fullName>MSA_Signed_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MSA Signed by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>