bbss218/force-app/main/default/objects/Account/fields/MSA_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>MSA_Signed_Date__c</fullName>
    <label>MSA Signed Date</label>
    <type>Date</type>
</CustomField>