bbss218/force-app/main/default/objects/Account/fields/MSA_Signed_Status__c.field-meta.xml
<CustomField>
    <fullName>MSA_Signed_Status__c</fullName>
    <label>MSA Signed Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>--None--</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>