bbss218/force-app/main/default/objects/Account/fields/MSA_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>MSA_Start_Date__c</fullName>
    <label>MSA Start Date</label>
    <type>Date</type>
</CustomField>