bbss218/force-app/main/default/objects/Account/fields/Retrive__c.field-meta.xml
<CustomField>
    <fullName>Retrive__c</fullName>
    <label>Retrive</label>
    <length>20</length>
    <type>Text</type>
</CustomField>