bbss218/force-app/main/default/objects/Account/fields/Version_Updated__c.field-meta.xml
<CustomField>
    <fullName>Version_Updated__c</fullName>
    <label>Version Updated</label>
    <length>50</length>
    <type>Text</type>
</CustomField>