bbss218/force-app/main/default/objects/Account/validationRules/prevent_changes_approval_pending.validationRule-meta.xml
<ValidationRule>
    <fullName>prevent_changes_approval_pending</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL( Account_Approval_Status__c , &quot;Pending&quot;),
    ISCHANGED( AnnualRevenue )
)</errorConditionFormula>
    <errorDisplayField>AnnualRevenue</errorDisplayField>
    <errorMessage>You cannot update Annual Revenue while the Account Approval Status is Pending.</errorMessage>
</ValidationRule>